dataset1235/2025-2/610742602/users/1156133430/executions/677928262_3921830315.log
== SUBMISSION (2025-08-28 20:30:07)
-- CODE: 
quantidade = float(imput(";"))
servico = (quantidade * 2.86) + 50
total = servico + (servico * (34/100))

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:23:43)
-- CODE: 
quantidade = float(imput(";"))
gasolina = quantidade * 2.86
servico = 50 * (34/100)
total = gasolina + servico
print("valor total: " ,round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:26:21)
-- CODE: 
quantidade = float(imput(";"))
gasolina = (quantidade * 2.86) + 50
servico = (34/100 * gasolina) + gasolina
print("valor total: " ,round(total))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:30:19)
-- CODE: 
quantidade = float(input(":"))
servico = (quantidade * 2.86) + 50
total = servico + (servico * (34/100))

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
:106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
:634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
:401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
:979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
:230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:30:03)
-- CODE: 
quantidade = float(imput(";"))
servico = (quantidade * 2.86) + 50
total = servico + (servico * (34/100))

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:24:40)
-- CODE: 
quantidade = float(imput(";"))
gasolina = quantidade * 2.86 + 50
servico = (34/100) + gasolina
print("valor total: " ,round(total,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:29:10)
-- CODE: 
quantidade = float(imput(";"))
servico = (quantidade  * 2.86) + 50
total = servico + (servico * (34/100))

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade = float(imput(";"))
                       ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
